refine: refine code based on code review
change API from /franchisee/3/orders?status=open to /franchisee/3/pending_orders
get rid of value of OrderStatus
Delete OrderUtil because it's not required